HPCC-17585 SOAPCALL support for persistent outgoing connections
- Add the persistent connection source files to the thorhelper project
- Add logic to SOAPCALL/HTTPCALL to Keep and reuse a connection when
  conditions are met
- Add a map in persistent connection implementation to keep track
  of available connections for endpoints to make it faster to locate an
  available connection for an endpoint
- Read from configuration entries to turn on and off this feature, and to
  control the max number of reuses of a connection.
- Add protocol parameter to differentiate different types of connections,
  especially TLS and regular to avoid misuses and exploits.

Signed-off-by: Yanrui Ma <yanrui.ma@lexisnexisrisk.com>

--- a/common/thorhelper/CMakeLists.txt
+++ b/common/thorhelper/CMakeLists.txt
@@ -68,6 +68,8 @@ set (    SRCS
          thorrparse.ipp
          thorsort.cpp
          thorsort.hpp
+         ../../esp/platform/persistent.cpp
+         ../../esp/platform/persistent.hpp
          
          roxiedebug.hpp
          roxiedebug.ipp
@@ -98,6 +100,7 @@ include_directories (
          ./../../testing/unittests
          ./../../system/tbb_sm/tbb/include
          ./../../system/security/shared
+         ../../esp/platform
          ${HPCC_SOURCE_DIR}/fs/dafsclient
     )
 
