HPCC-17585 SOAPCALL support for persistent outgoing connections
- Add the persistent connection source files to the thorhelper project
- Add logic to SOAPCALL/HTTPCALL to Keep and reuse a connection when
  conditions are met
- Add a map in persistent connection implementation to keep track
  of available connections for endpoints to make it faster to locate an
  available connection for an endpoint
- Read from configuration entries to turn on and off this feature, and to
  control the max number of reuses of a connection.
- Add protocol parameter to differentiate different types of connections,
  especially TLS, to avoid misuses and exploits.
- Improvements based on code reviews, including better ref count,  use
  atomic bool, conditionally clean up empty socket sets, and construct
  key string in constructor.
- Move the persistent source files into the thorhelper lib

Signed-off-by: Yanrui Ma <yanrui.ma@lexisnexisrisk.com>

--- a/ecl/ecl-package/CMakeLists.txt
+++ b/ecl/ecl-package/CMakeLists.txt
@@ -52,6 +52,7 @@ include_directories (
          ${HPCC_SOURCE_DIR}/system/xmllib
          ${HPCC_SOURCE_DIR}/ecl/eclcmd
          ${HPCC_SOURCE_DIR}/ecl/eclcc
+         ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 ADD_DEFINITIONS( -D_CONSOLE )
@@ -64,6 +65,7 @@ target_link_libraries ( ecl-packagemap
         jlib
         esphttp
         workunit
+        thorhelper
     )
 
 if ( UNIX )
