--- a/esp/logging/loggingmanager/CMakeLists.txt
+++ b/esp/logging/loggingmanager/CMakeLists.txt
@@ -48,6 +48,7 @@ include_directories (
     ${HPCC_SOURCE_DIR}/esp/bindings/SOAP/xpp
 #    ./../../protocols/sidex
     ${HPCC_SOURCE_DIR}/esp/logging/logginglib
+    ${HPCC_SOURCE_DIR}/common/thorhelper
     ./..
 )
 
@@ -69,4 +70,5 @@ target_link_libraries ( loggingmanager
     xmllib
     logginglib
     esphttp
+    thorhelper
 )
