--- a/esp/protocols/http/CMakeLists.txt
+++ b/esp/protocols/http/CMakeLists.txt
@@ -47,7 +47,6 @@ set(SRCS
     ../../platform/espcache.cpp
     ../../platform/sechandler.cpp
     ../../platform/txsummary.cpp
-    ../../platform/persistent.cpp
     mapinfo.cpp
     plugin.cpp
     )
@@ -68,6 +67,7 @@ include_directories(
     ./../../../system/mp 
     ./../../../dali/base
     ./../../../common/workunit
+    ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 add_definitions(-DESPHTTP_EXPORTS -DESP_TIMING -D_USRDLL -DESP_PLUGIN)
@@ -82,6 +82,7 @@ target_link_libraries(
     jlib
     xmllib
     dalibase
+    thorhelper
     )
 
 if(LIBMEMCACHED_FOUND)
