--- a/esp/services/espcontrol/CMakeLists.txt
+++ b/esp/services/espcontrol/CMakeLists.txt
@@ -48,6 +48,7 @@ include_directories (
          ./../../bindings/SOAP/xpp
          ./../../smc/SMCLib
          ./../../../common/environment
+         ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 ADD_DEFINITIONS( -D_USRDLL )
@@ -58,6 +59,7 @@ target_link_libraries ( ws_espcontrol
          jlib
          xmllib
          esphttp
+         thorhelper
     )
     
 IF (USE_OPENSSL)
