--- a/esp/services/ws_loggingservice/CMakeLists.txt
+++ b/esp/services/ws_loggingservice/CMakeLists.txt
@@ -38,6 +38,7 @@ include_directories (
      ${HPCC_SOURCE_DIR}/esp/clients
      ${HPCC_SOURCE_DIR}/esp/clients/LoggingClient
      ${HPCC_SOURCE_DIR}/esp/logging/logginglib
+     ${HPCC_SOURCE_DIR}/common/thorhelper
      ./..
 )
 
@@ -57,4 +58,5 @@ target_link_libraries ( ws_loggingservice
     esphttp
     jlib
     logginglib
+    thorhelper
 )
