--- a/tools/esdlcmd/CMakeLists.txt
+++ b/tools/esdlcmd/CMakeLists.txt
@@ -61,6 +61,7 @@ include_directories (
          ${HPCC_SOURCE_DIR}/tools/esdlcomp
          ${HPCC_SOURCE_DIR}/tools/esdlcmd-xml
          ${HPCC_SOURCE_DIR}/esp/esdllib
+         ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 ADD_DEFINITIONS( -D_CONSOLE )
@@ -81,6 +82,7 @@ target_link_libraries ( esdl
         xmllib
         esdllib
         esdlcomp
+        thorhelper
     )
 
 if ( UNIX )
