--- a/ecl/ecl-bundle/CMakeLists.txt
+++ b/ecl/ecl-bundle/CMakeLists.txt
@@ -53,6 +53,7 @@ include_directories (
          ${HPCC_SOURCE_DIR}/system/xmllib
          ${HPCC_SOURCE_DIR}/ecl/eclcmd
          ${HPCC_SOURCE_DIR}/ecl/eclcc
+         ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 ADD_DEFINITIONS( -D_CONSOLE )
@@ -63,6 +64,7 @@ target_link_libraries ( ecl-bundle
         jlib
         esphttp
         workunit
+        thorhelper
     )
 
 if ( UNIX )
