--- a/esp/logging/logginglib/CMakeLists.txt
+++ b/esp/logging/logginglib/CMakeLists.txt
@@ -29,6 +29,7 @@ include_directories (
     ${HPCC_SOURCE_DIR}/esp/bindings/SOAP/xpp        #XmlPullParser.h in generated/ws_loggingservice_esp.ipp
     ${HPCC_SOURCE_DIR}/esp/bindings/SOAP/Platform   #CSoapRequestBinding
     ${HPCC_SOURCE_DIR}/esp/clients                  #edwin.h in generated/ws_loggingservice.esp
+    ${HPCC_SOURCE_DIR}/common/thorhelper
 )
 
 ADD_DEFINITIONS ( -D_USRDLL -DLOGGINGCOMMON_EXPORTS )
@@ -53,4 +54,5 @@ target_link_libraries ( logginglib
     jlib
     xmllib
     esphttp
+    thorhelper
 )
