--- a/esp/services/ws_configmgr/CMakeLists.txt
+++ b/esp/services/ws_configmgr/CMakeLists.txt
@@ -51,6 +51,7 @@ include_directories(
     ${CMAKE_BINARY_DIR}/oss
     ${CMAKE_BINARY_DIR}/esp/services/ws_configmgr
     ${BOOST_REGEX_INCLUDE_DIR}
+    ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 add_definitions(-D_USRDLL)
@@ -71,6 +72,7 @@ target_link_libraries(ws_configmgr
     environment
     dllserver
     configmgr
+    thorhelper
     )
 
 IF (USE_OPENSSL)
