--- a/esp/services/ws_elk/CMakeLists.txt
+++ b/esp/services/ws_elk/CMakeLists.txt
@@ -57,6 +57,7 @@ include_directories (
          ${CMAKE_BINARY_DIR}
          ${CMAKE_BINARY_DIR}/oss
          ${CMAKE_BINARY_DIR}/esp/services/ws_elk
+         ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 ADD_DEFINITIONS( -D_USRDLL )
@@ -72,4 +73,5 @@ target_link_libraries ( ws_elk
          environment
          dllserver
          SMCLib
+         thorhelper
     )
