--- a/esp/services/ws_topology/CMakeLists.txt
+++ b/esp/services/ws_topology/CMakeLists.txt
@@ -56,6 +56,7 @@ include_directories (
          ./../../smc/SMCLib 
          ./../../bindings/SOAP/xpp 
          ./../..//esplib
+         ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 ADD_DEFINITIONS( -D_USRDLL -DWS_TOPOLOGY_EXPORTS )
@@ -78,6 +79,7 @@ target_link_libraries ( ws_topology
          workunit 
          SMCLib 
          swapnodelib
+         thorhelper
          )
 
 IF (USE_OPENSSL)
