--- a/esp/smc/SMCLib/CMakeLists.txt
+++ b/esp/smc/SMCLib/CMakeLists.txt
@@ -57,6 +57,7 @@ include_directories (
          ./../../bindings 
          ./../../bindings/SOAP/xpp 
          ./.. 
+         ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 ADD_DEFINITIONS( -D_USRDLL -DSMCLIB_EXPORTS )
@@ -77,4 +78,5 @@ target_link_libraries ( SMCLib
          eclrtl 
          deftype 
          workunit 
+         thorhelper
     )
