HPCC-17585 SOAPCALL support for persistent outgoing connections
- Add the persistent connection source files to the thorhelper project
- Add logic to SOAPCALL/HTTPCALL to Keep and reuse a connection when
  conditions are met
- Add a map in persistent connection implementation to keep track
  of available connections for endpoints to make it faster to locate an
  available connection for an endpoint
- Read from configuration entries to turn on and off this feature, and to
  control the max number of reuses of a connection.
- Add protocol parameter to differentiate different types of connections,
  especially TLS, to avoid misuses and exploits.
- Improvements based on code reviews, including better ref count,  use
  atomic bool, conditionally clean up empty socket sets, and construct
  key string in constructor.
- Move the persistent source files into the thorhelper lib

Signed-off-by: Yanrui Ma <yanrui.ma@lexisnexisrisk.com>

--- a/ecl/eclcmd/CMakeLists.txt
+++ b/ecl/eclcmd/CMakeLists.txt
@@ -69,6 +69,7 @@ include_directories (
          ./../../esp/smc/SMCLib
          ./../../system/jlib
          ./../../system/xmllib
+         ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 ADD_DEFINITIONS( -D_CONSOLE )
