--- a/esp/services/ws_sql/CMakeLists.txt
+++ b/esp/services/ws_sql/CMakeLists.txt
@@ -94,6 +94,7 @@ if(WSSQL_SERVICE)
         ${libantlr3c_includes}
         ${ESPSCM_GENERATED_DIR}
         ${CMAKE_CURRENT_SOURCE_DIR}/SQL2ECL
+        ${HPCC_SOURCE_DIR}/common/thorhelper
         )
 
     if (CMAKE_COMPILER_IS_CLANG)
