--- a/esp/clients/WUManager/CMakeLists.txt
+++ b/esp/clients/WUManager/CMakeLists.txt
@@ -44,6 +44,7 @@ include_directories (
          ./../../../system/jlib 
          ./../../platform 
          ./../../clients 
+         ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 ADD_DEFINITIONS( -D_CONSOLE )
