--- a/esp/services/ws_machine/CMakeLists.txt
+++ b/esp/services/ws_machine/CMakeLists.txt
@@ -56,6 +56,7 @@ include_directories (
          ./../../bindings/SOAP/xpp 
          ./../../../esp/platform 
          ./../../smc/SMCLib 
+         ${HPCC_SOURCE_DIR}/common/thorhelper
     )
 
 ADD_DEFINITIONS( -D_USRDLL )
